# comp0034-tutorials-2025

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/week1/: 1-concepts.md  2-basic-streamlit-app.md
src/dash_app/: dash_demo_app.py
src/data/: mock_api.py
src/fastapi_app/: fast_demo_api.py
src/flask_app/: flask_demo_app.py
src/flask_app/templates/: base.html  index.html
src/streamlit_app/: streamlit_demo_app.py
